<resources>
    <string name="ad_mob_app_id" translatable="false">ca-app-pub-7211217453116351~6569738789</string>
    <string name="ad_mob_app_id_layouts" translatable="false">ca-app-pub-7211217453116351/2440181261</string>
    <string name="preference_key_default_tip_percent" translatable="false">preference_default_tip_percent</string>
    <string name="preference_key_delete_all_bills" translatable="false">preference_delete_all_bills</string>
    <string name="preference_key_remove_ads" translatable="false">preference_remove_ads</string>
    <string name="preference_key_developer" translatable="false">preference_developer</string>
    <string name="preference_key_contact" translatable="false">preference_contact</string>
    <string name="preference_key_version" translatable="false">preference_version</string>
    <string name="preference_key_privacy_policy" translatable="false">preference_privacy_policy</string>
    <string name="preference_key_ads_removed" translatable="false">preference_ads_removed</string>
    <string name="app_name" translatable="false">Blitter</string>
    <string name="preference_summary_developer" translatable="false">Samuel Soutullo Sobral</string>
    <string name="developer_email" translatable="false">samuelsoutullosobral@gmail.com</string>
    <string name="persons_array_separator">,&#160;</string>
    <string name="main_fab_manually">Write manually</string>
    <string name="main_fab_gallery">From gallery</string>
    <string name="main_fab_camera">From camera</string>
    <string name="bills_empty_state_welcome">Welcome!</string>
    <string name="bills_empty_state_instruction_before">Press the</string>
    <string name="bills_empty_state_instruction_after">button to begin</string>
    <string name="content_description_blue_circle">Blue circle</string>
    <string name="content_description_receipt_icon">Receipt icon</string>
    <string name="content_description_button_start">Main button</string>
    <string name="badge_bill_status_not_completed">Uncompleted</string>
    <string name="bill_beautiful_price_without_tip">%1$s</string>
    <string name="bill_beautiful_price_with_tip">%1$s (%2$s + %3$s tip)</string>
    <string name="action_activity_main_search">Search</string>
    <string name="action_activity_main_settings">Settings</string>
    <string name="hint_edit_text_product_name">Product</string>
    <string name="hint_edit_text_product_price">Price</string>
    <string name="content_description_delete_product">Delete product</string>
    <string name="content_description_edit_product">Edit product</string>
    <string name="manual_transcription_product_quantity">Quantity: %1$d</string>
    <string name="manual_transcription_product_price">Price/Unit: %1$s</string>
    <string name="action_activity_manual_done">Done</string>
    <string name="button_amend_bill_summary">Edit</string>
    <string name="button_continue_bill_summary">Continue</string>
    <string name="bill_summary_header">YOUR BILL - BLITTER</string>
    <string name="bill_summary_total_products_text">PRODUCTS COUNT:</string>
    <string name="bill_summary_products_header">PRODUCTS</string>
    <string name="bill_summary_subtotal_text">SUBTOTAL:</string>
    <string name="bill_summary_tax_text">TAX:</string>
    <string name="bill_summary_total_price_text">TOTAL PRICE:</string>
    <string name="bill_summary_tip_value">TIP:</string>
    <string name="bill_summary_separator_product_count">-</string>
    <string name="bill_summary_separator_products_title">=</string>
    <string name="bill_summary_separator_total_price">*</string>
    <string name="item_assignation_persons_unassigned">Unassigned</string>
    <string name="content_description_assignation_green_tick">Green tick which indicates that the product is properly assigned</string>
    <string name="content_description_user_profile_picture">User profile image</string>
    <string name="tip_final_result">Here you have your split bill. Tap over any person for a detailed breakdown</string>
    <string name="final_result_button_edit_split">Modify</string>
    <string name="final_result_button_finished">Done</string>
    <string name="content_description_button_rename_bill">Rename bill</string>
    <string name="title_user_products">Products</string>
    <string name="bill_trace_all_product">Whole product (%1$s)</string>
    <string name="bill_trace_partial_product">1/%1$d of the product (%2$s)</string>
    <string name="generic_dialog_cancel">Cancel</string>
    <string name="dialog_edit_product_hint_product_name">Product name</string>
    <string name="dialog_edit_product_hint_product_price">Price (%1$s)</string>
    <string name="dialog_edit_product_hint_product_quantity">Quantity (max. 50)</string>
    <string name="dialog_tip_hint">Enter the tip percentage (%) using the control below. It is possible to change the default value through the app settings</string>
    <string name="dialog_tip_result_text">A %1$d%% tip (%2$s) will be added to the bill.</string>
    <string name="dialog_edit_tax_hint">Tax (%1$s)</string>
    <string name="toast_manual_transcription_fill_fields">Please, fill all the fields properly</string>
    <string name="dialog_delete_product_title">Delete product</string>
    <string name="dialog_delete_product_message">Are you sure you want to delete the product %1$s?</string>
    <string name="dialog_generic_delete_button">Delete</string>
    <string name="edit_product_dialog_positive_button">Save</string>
    <string name="dialog_edit_product_title">Edit product</string>
    <string name="toast_manual_transcription_no_products">You should add at least one product before continuing</string>
    <string name="dialog_edit_tax_title">Edit tax</string>
    <string name="assignation_intro_title">Assign products to people</string>
    <string name="assignation_intro_description">A list of products will be shown now. Tap over one product to assign people to it. You can also select multiple products if you tap and hold over one of them</string>
    <string name="generic_dialog_positive_button">OK</string>
    <string name="assignation_dialog_neutral_button">Add person</string>
    <string name="dialog_add_person_title">Add person</string>
    <string name="dialog_add_person_positive_button">Add</string>
    <string name="dialog_add_person_field_hint">Person\'s name</string>
    <string name="empty_state_assignation_dialog">You have not added any people yet, tap over \"%1$s\" to do it</string>
    <string name="choosing_bar_choose_all">All</string>
    <string name="app_bar_button_assign">Assign</string>
    <string name="app_bar_button_delete">Delete</string>
    <string name="app_bar_button_clear_assignations">Clear assignations</string>
    <string name="dialog_clear_assignations_message">Are you sure you want to clear all the assignations for the selected products?</string>
    <string name="toast_assignation_must_assign_all">You must assign all the products before continuing</string>
    <string name="generic_dialog_continue">Continue</string>
    <string name="dialog_tip_title">Tip</string>
    <string name="bill_final_name_pattern">Bill from %1$s</string>
    <string name="action_activity_final_result_name">Rename</string>
    <string name="action_activity_final_result_delete">Delete</string>
    <string name="activity_final_result_section_title">Your split bill</string>
    <string name="dialog_rename_bill_title">Rename bill</string>
    <string name="dialog_rename_bill_edit_text_hint">Bill\'s name</string>
    <string name="on_all_bills_deleted_warning">Only the visible bills in the current list were deleted. You can delete them all through the app settings</string>
    <string name="preference_category_title_settings">Settings</string>
    <string name="preference_category_title_about">About</string>
    <string name="preference_title_default_tip">Tip percentage</string>
    <string name="preference_summary_default_tip">Set the default tip percentage</string>
    <string name="preference_title_delete_data">Delete app data</string>
    <string name="preference_summary_delete_bills">All the bills and people will be deleted</string>
    <string name="preference_title_remove_ads">Remove ads</string>
    <string name="preference_summary_remove_ads">No more ads!</string>
    <string name="preference_title_extra_donation">Support Blitter again</string>
    <string name="preference_summary_extra_donation">Make an extra donation. This does not unlock additional features</string>
    <string name="preference_title_developer">Developer</string>
    <string name="preference_title_contact">Contact</string>
    <string name="preference_title_version">Version</string>
    <string name="preference_title_privacy_policy">Privacy policy</string>
    <string name="preference_summary_privacy_policy">Check the privacy policy</string>
    <string name="dialog_delete_all_bills_message">Are you sure you want to delete all the bills and people entered in the app?</string>
    <string name="toast_delete_all_bills_success">The data was deleted successfully</string>
    <string name="intent_chooser_title_send_mail">Send e-mail</string>
    <string name="app_bar_search_hint">Search…</string>
    <string name="bill_search_not_found">No results found for the current query</string>
    <string name="toast_ocr_low_storage">Not enough storage to recognize the bill. Please free some storage space</string>
    <string name="product_name_taxes">Tax</string>
    <string name="camera_intro_title">Scan a receipt</string>
    <string name="camera_intro_description">The camera will be opened now. Point your camera towards the receipt until the app recognises the products. Please, try to keep all the products\' names inside the camera view. The total price should be also visible.</string>
    <string name="app_bar_button_tax">Tax</string>
    <string name="content_description_button_tax_clear">Clear tax</string>
    <string name="content_description_button_switch_flash">Enable or disable flash</string>
    <string name="action_activity_final_result_clone">Clone</string>
    <string name="cloned_bill_prefix">[Copy]</string>
    <string name="action_activity_final_result_share">Share</string>
    <string name="bill_share_breakdown">BREAKDOWN</string>
    <string name="bill_share_tip_line_name">TIP</string>
    <string name="intent_share_title">Share to</string>
    <string name="activity_ad_mob_message">This ad helps the developer and makes Blitter a free app</string>
    <string name="button_text_wait">Please, wait</string>
    <string name="activity_ocr_finding_receipt">Finding receipt…</string>
    <string name="activity_ocr_recognising_receipt">Recognising…\nKeep focusing the receipt</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="assignation_content_description_delete_person">Delete this person</string>
    <string name="dialog_delete_recent_person_title">Delete \"%1$s\"</string>
    <string name="dialog_delete_recent_person_message_assigned">This person is currently assigned to some products. If you delete it, these assignations will be removed. Are you sure you want to delete this person and remove its assignations?</string>
    <string name="dialog_delete_recent_person_message_not_assigned">Are you sure you want to delete this person from the recent persons list?</string>
    <string name="dialog_delete_recent_person_positive_assigned">Unassign and delete</string>
    <string name="remove_ads_options_title">Remove ads and waits</string>
    <string name="remove_ads_options_message">Pay what you want. Any option permanently removes ads and waiting screens.</string>
    <string name="extra_donation_options_title">Support Blitter again</string>
    <string name="extra_donation_options_message">Thanks for supporting Blitter. These options are just an extra donation and do not unlock any additional benefit.</string>
    <string name="button_remove_ads"><u>Remove ads and waits</u></string>
</resources>