<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_edit_over_primary_24dp"
        android:title="@string/action_activity_final_result_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_activity_final_result_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_forever_over_primary_24dp"
        android:title="@string/action_activity_final_result_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clone"
        android:icon="@drawable/ic_content_copy_over_primary_24dp"
        android:title="@string/action_activity_final_result_clone"
        app:showAsAction="never" />
</menu>