<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable name="utils" type="es.soutullo.blitter.view.util.BlitterUtils" />
        <variable name="bill" type="es.soutullo.blitter.model.vo.bill.Bill" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root_bill_summary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context="es.soutullo.blitter.view.activity.BillSummaryActivity">

        <TextView
            android:id="@+id/blitter_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/bill_summary_header"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/bill_summary_separator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bill_summary_separator_product_count"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            android:typeface="monospace"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blitter_header"
            tools:text="--------------------------------" />

        <TextView
            android:id="@+id/total_products_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_summary_total_products_text"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/bill_summary_separator1"
            app:layout_constraintTop_toBottomOf="@+id/bill_summary_separator1" />

        <TextView
            android:id="@+id/total_products_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:text="@{String.valueOf(bill.lines.size())}"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/bill_summary_separator1"
            app:layout_constraintTop_toBottomOf="@+id/bill_summary_separator1"
            tools:text="20" />

        <TextView
            android:id="@+id/bill_summary_separator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_summary_separator_product_count"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            android:typeface="monospace"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_products_text"
            tools:text="--------------------------------" />

        <TextView
            android:id="@+id/products_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bill_summary_products_header"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bill_summary_separator2" />

        <TextView
            android:id="@+id/bill_summary_separator3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_summary_separator_products_title"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            android:typeface="monospace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/products_header"
            tools:text="================================" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/bill_summary_lines_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bill_summary_separator4"
            app:layout_constraintStart_toStartOf="@+id/bill_summary_separator3"
            app:layout_constraintEnd_toEndOf="@+id/bill_summary_separator3"
            app:layout_constraintTop_toBottomOf="@+id/bill_summary_separator3"
            tools:listitem="@layout/item_bill_line_bill_summary" />

        <TextView
            android:id="@+id/bill_summary_separator4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_summary_separator_total_price"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            android:typeface="monospace"
            app:layout_constraintBottom_toTopOf="@+id/subtotal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="********************************" />

        <TextView
            android:id="@+id/subtotal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_summary_subtotal_text"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tax_text"
            app:layout_constraintStart_toStartOf="@id/tax_text"
            android:visibility="@{bill.tax > 0? View.VISIBLE : View.GONE}" />

        <TextView
            android:id="@+id/subtotal_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{utils.getPriceAsString(bill.subtotal)}"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tax_text"
            app:layout_constraintEnd_toEndOf="@id/tax_value"
            android:visibility="@{bill.tax > 0? View.VISIBLE : View.GONE}"
            tools:text="2,00€"/>

        <TextView
            android:id="@+id/tax_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_summary_tax_text"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/total_price_text"
            app:layout_constraintStart_toStartOf="@id/total_price_text"
            android:visibility="@{bill.tax > 0? View.VISIBLE : View.GONE}" />

        <TextView
            android:id="@+id/tax_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{utils.getPriceAsString(bill.tax)}"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/total_price_text"
            app:layout_constraintEnd_toEndOf="@id/total_price_value"
            android:visibility="@{bill.tax > 0? View.VISIBLE : View.GONE}"
            tools:text="0,07€"/>

        <TextView
            android:id="@+id/total_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_summary_total_price_text"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/bill_summary_separator5"
            app:layout_constraintStart_toStartOf="@+id/bill_summary_separator5" />

        <TextView
            android:id="@+id/total_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{utils.getPriceAsString(bill.subtotal + bill.tax)}"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/bill_summary_separator5"
            app:layout_constraintEnd_toEndOf="@+id/bill_summary_separator5"
            tools:text="2,07€" />

        <TextView
            android:id="@+id/bill_summary_separator5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_summary_separator_total_price"
            android:textColor="@color/color_bill_summary_text"
            android:textSize="16sp"
            android:typeface="monospace"
            app:layout_constraintBottom_toTopOf="@+id/amend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="********************************" />

        <Button
            android:id="@+id/amend"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_edit_black_24dp"
            android:drawablePadding="@dimen/drawable_button_padding"
            android:drawableStart="@drawable/ic_edit_black_24dp"
            android:text="@string/button_amend_bill_summary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="onAmendClicked"/>

        <Button
            android:id="@+id/done"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_done_black_24dp"
            android:drawablePadding="@dimen/drawable_button_padding"
            android:drawableStart="@drawable/ic_done_black_24dp"
            android:text="@string/button_continue_bill_summary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="onConfirmClicked"/>

    </android.support.constraint.ConstraintLayout>
</layout>
