<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>

        <variable name="bills" type="java.util.List&lt;es.soutullo.blitter.model.vo.bill.Bill&gt;" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="es.soutullo.blitter.view.activity.MainActivity"
        tools:showIn="@layout/activity_main">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            android:id="@+id/constraintLayout"
            android:visibility="@{bills == null || bills.isEmpty()? View.VISIBLE : View.GONE}">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bills_empty_state_welcome"
                android:textAppearance="@style/AppIntroDefaultHeading"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="0.497" />

            <ImageView
                android:id="@+id/circle_background"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/content_description_blue_circle"
                android:cropToPadding="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome"
                app:srcCompat="@drawable/ic_brightness_black_24dp"
                android:tint="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/receipt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/content_description_receipt_icon"
                app:layout_constraintBottom_toBottomOf="@+id/circle_background"
                app:layout_constraintLeft_toLeftOf="@+id/circle_background"
                app:layout_constraintRight_toRightOf="@+id/circle_background"
                app:layout_constraintTop_toTopOf="@+id/circle_background"
                app:srcCompat="@drawable/ic_receipt_black_24dp"
                android:tint="@android:color/white"/>

            <TextView
                android:id="@+id/tip_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bills_empty_state_instruction_before"
                android:textAppearance="@style/AppIntroDefaultText"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="@+id/tip_button"
                app:layout_constraintBottom_toBottomOf="@+id/tip_button"
                app:layout_constraintRight_toLeftOf="@+id/tip_button"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageView
                android:id="@+id/tip_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_button_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintLeft_toRightOf="@+id/tip_before"
                app:layout_constraintRight_toLeftOf="@+id/tip_after"
                app:layout_constraintTop_toBottomOf="@+id/circle_background"
                app:srcCompat="@drawable/ic_add_circle_24dp" />

            <TextView
                android:id="@+id/tip_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bills_empty_state_instruction_after"
                android:textAppearance="@style/AppIntroDefaultText"
                app:layout_constraintTop_toTopOf="@+id/tip_button"
                app:layout_constraintBottom_toBottomOf="@+id/tip_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tip_button" />

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recent_bills_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{bills == null || bills.isEmpty()? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/item_bill_main_activity" />

    </android.support.constraint.ConstraintLayout>
</layout>
